<resources>
    <string name="app_name">App for Reddit</string>
    <string name="posted_by">Posted by</string>
    <string name="author">Author</string>
    <string name="text_publication">Text publication</string>
    <string name="image_for_this_publication">Image for this publication</string>
    <string name="amount_comments">amount comments</string>
    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fullscreen_image">fullscreen_image</string>
    <string name="previous_page">previous page</string>
    <string name="next_page">next page</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>