<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="6dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/author"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posted_by"
            android:textSize="11sp"
            android:textStyle="italic" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/labelPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_publication"
            android:textSize="16sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imagePublication"
            android:layout_width="230dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/image_for_this_publication"
            android:scaleType="center"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:srcCompat="@drawable/ic_launcher_background" />
    </TableRow>
</TableLayout>


